1998-08-08  Mandrake <mandrake@mandrake.net>
	* fixed Makefile.am to use libtool's versioning correctly :)

1998-08-07  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esdlib.c: switched to memcpy instead of bcopy.
	* audio_solaris.c: added a few more recognized devices.
		thx to Tynian and Peter Asobeck for Solaris devices.
	* audio_oss.c: powerpc patches courtesy of mackman.
	* esdcat.c: forgot to check the FILE* returned from open, thx vendu.
	
1998-07-16  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, proto.c, samples.c:
	everything but recording works for irix. irix->linux connectivity
	and back works ok, except for remote recording.  keeping track
	of client states seems to be uglier than it needs to be. not so
	mental note to look into that. 

1998-07-15  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, proto.c, samples.c, test-script:
	almost got it all on irix.  still need to tweak sample caching 
	problems. other than that. tried to filter out the esdctl calls
	from test-script, as it doesn't work properly with an ESPEAKER set.

	* esd-server.h, players.c, proto.c: finally got the client state
	code to track endian status correctly, on linux and irix.  gross
	macros to track communication protocol level data. need to filter
	those out via cmd line macro at some point...

1998-07-13  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd-server.h, esd.h, players.c, proto.c:
	crack one at including communication level diagnostic info.

1998-07-11  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd-server.h, esd.c, mix.c, players.c, proto.c, samples.c:
	tried to enforce some semblance of order on the trace/debug messages.
	added globals esdbg_trace, and esdbg_comms, for debug msg filtering.

1998-07-07  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esdlib.c (esd_open_sound): *always* consider an "else" clause
	for every "if"...	

1998-07-05  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esdsample.c, esdlib.c: added a confirmation step to the