@@ -11,7 +11,13 @@ AC_CHECK_HEADERS(soundcard.h sys/soundcard.h machine/soundcard.h sys/audio.h sys
 if test "${ac_cv_header_sys_soundcard_h}" = "yes" || \
    test "${ac_cv_header_soundcard_h}" = "yes" || \
    test "${ac_cv_header_machine_soundcard_h}" = "yes"; then
-   AC_DEFINE(DRIVER_OSS)
+
+# mklinux/powerpc needs special care and feeding
+   if test "${host_cpu}" = "powerpc"; then
+     AC_DEFINE(DRIVER_MKLINUX)
+   else
+     AC_DEFINE(DRIVER_OSS)
+   fi
 fi
 
 if test "${ac_cv_header_sys_audio_h}" = "yes"; then
