@@ -1,3 +1,9 @@
+1998-08-09  Yo Ric Dude  <ericmit@ix.netcom.com>
+
+	* AUTHORS: updated list of contributors
+	* Makefile.am, acconfig.h, audio.c, configure.in, esd-server.h:
+	updated for MkLinux (Jeff Dubrule), still need to merge in mix.c
+
 1998-08-08  Mandrake <mandrake@mandrake.net>
 	* fixed Makefile.am to use libtool's versioning correctly :)
 
